<resources>
    <string name="app_name">八戒机器人</string>
    <string name="ubt_qq_login">QQ登录</string>
    <string name="ubt_wechat_login">微信登录</string>
    <string name="ubt_tab_little_pig">八戒</string>
    <string name="ubt_tab_smarthome">智能家居</string>
    <string name="ubt_tab_skill">技能</string>
    <string name="ubt_tab_person">我的</string>
    <string name="ubt_wx_uninstalled">微信未安装</string>
    <string name="ubt_wx_unspported">微信不支持</string>
    <string name="ubt_login_failure">登录失败</string>
    <string name="ubt_network_unconnect">网络不可用，请检测试手机网络</string>
    <string name="ubt_net_error_tips">网络不给力，请稍后重试</string>
    <string name="ubt_skip">跳过</string>
    <string name="ubt_long_press_pig">请确保八戒已开机</string>
    <string name="ubt_startup_tip">开机过程需要60秒左右\n当听到开机音效时即开机成功</string>
    <string name="ubt_start_set_net">开始绑定与配网</string>
    <string name="ubt_bind">绑定</string>
    <string name="ubt_pig_match">八戒配对</string>
    <string name="voice_box_open">八戒开机</string>
    <string name="ubt_pig_bind">八戒绑定</string>
    <string name="ubt_search_pig">搜索八戒</string>
    <string name="searching_pig">搜索八戒中</string>
    <string name="research_pig">重新搜索</string>
    <string name="researching_pig">重新搜索中</string>
    <string name="ubt_press_mute_btn_tips">长按八戒的热点键，进入配网模式</string>
    <string name="ubt_ble_close_pig_tip">将手机靠近八戒</string>
    <string name="ubt_bluetooth_none">蓝牙模块不存在，不能使用</string>
    <string name="ubt_want_open_bluetooth">八戒想要打开蓝牙</string>
    <string name="ubt_cancel">取消</string>
    <string name="ubt_close">关闭</string>
    <string name="ubt_allowed">允许</string>
    <string name="ubt_connect">连接</string>
    <string name="ubt_password">密码</string>
    <string name="ubt_open_wifif_tips">获取wifi列表需要打开本机wifi开关</string>
    <string name="ubt_enter">确认</string>
    <string name="ubt_wifi_no_pwd_tips">确认此Wi-Fi无密码？</string>
    <string name="ubt_set_pig_net">八戒配网</string>
    <string name="ubt_bunding_ping_timeout">绑定八戒超时，请稍后重试</string>
    <string name="ubt_one_user_one_pig">一个账号只能绑定一台八戒</string>
    <string name="ubt_one_pig_five_user">一台八戒只能绑定5个账号</string>
    <string name="ubt_set_net_success">配网成功</string>
    <string name="ubt_connecting">连接中</string>
    <string name="ubt_mina">我的</string>
    <string name="ubt_pig">八戒</string>
    <string name="ubt_unbund_pig">未绑定八戒，</string>
    <string name="ubt_my_pig">我的八戒</string>
    <string name="ubt_send_voice">给自己的八戒发送语音留言</string>
    <string name="ubt_add_pig">配对八戒</string>
    <string name="ubt_add_pig_sub">配对八戒之间的语音留言</string>
    <string name="ubt_skills_manual">技能手册</string>
    <string name="ubt_skills_detail">技能详情</string>
    <string name="ubt_more_funtions">了解更多功能</string>
    <string name="ubt_recent_calls">最近通话</string>
    <string name="ubt_null">无</string>
    <string name="ubt_visitor_login">游客登录</string>
    <string name="ubt_bunding_set_net">绑定与配网</string>
    <string name="ubt_person_hotspot">八戒热点</string>
    <string name="ubt_mobile_bee_hive">蜂窝移动网络</string>
    <string name="ubt_no_sim">未插SIM卡</string>
    <string name="ubt_is_close">已关闭</string>
    <string name="ubt_is_open">已开启</string>
    <string name="ubt_not_open">未开启</string>
    <string name="ubt_device_manger">设备管理</string>
    <string name="ubt_custom_answer">定制问答</string>
    <string name="ubt_custom_answer_sub">定制你的专属个性问答</string>
    <string name="ubt_aclock">闹钟</string>
    <string name="ubt_aclock_sub">你在八戒上设置的闹钟</string>
    <string name="ubt_remind">日程提醒</string>
    <string name="ubt_remind_sub">八戒要提醒主人的事都在这里</string>
    <string name="ubt_qq_music">QQ音乐</string>
    <string name="ubt_help">帮助与反馈</string>
    <string name="ubt_feedback">意见反馈</string>
    <string name="ubt_about_pig">关于APP</string>
    <string name="ubt_about">关于</string>
    <string name="ubt_version_format">版本%1$s</string>
    <string name="ubt_account">账号类型</string>
    <string name="ubt_associalted_account">关联QQ或微信</string>
    <string name="ubt_user_info">个人信息</string>
    <string name="ubt_photo">头像</string>
    <string name="ubt_logout">退出登录</string>
    <string name="my_pig">我的八戒</string>
    <string name="pic_pair">配对八戒</string>
    <string name="member_group">成员组</string>
    <string name="address_book">通讯录</string>
    <string name="device_manage">设备管理</string>
    <string name="nickname_call_phone">报昵称打电话</string>
    <string name="ubt_nikename">名字</string>
    <string name="add_contact">添加联系人</string>
    <string name="set_contact">编辑联系人</string>
    <string name="complete">完成</string>
    <string name="contact_limit">通讯录已满30人,如需新增请先删除联系人</string>
    <string name="ubt_off_line">离线</string>
    <string name="ubt_unbind">解除绑定</string>
    <string name="ubt_device_update">设备升级</string>
    <string name="ubt_unbing_tips">解绑后，将不能通过app使用此八戒</string>
    <string name="ubt_pig_serialno">八戒序列号：%1$s</string>
    <string name="ubt_pig_version_format">八戒当前版本：%1$s</string>
    <string name="alarm">闹钟</string>
    <string name="ubt_ubbind_success">解绑成功</string>
    <string name="ubt_transfer_admin_tips">你是管理员，解绑前请先转让管理员权限</string>
    <string name="ubt_exit_group_tips">你是管理员，退出成员组请先转让管理员权限</string>
    <string name="ubt_pig_unset_net">八戒未配网，</string>
    <string name="ubt_click_for_bind">点击绑定</string>
    <string name="ubt_click_for_net">点击配网</string>
    <string name="ubt_hotspot_name">热点名称</string>
    <string name="ubt_device_version_update">系统升级</string>
    <string name="ubt_upgrade_now">点击升级</string>
    <string name="ubt_pig_updateing">收到升级请求，八戒会在连接无线网络的情况下自动下载和安装</string>
    <string name="ubt_pig_update_failure">升级失败，请重试</string>
    <string name="ubt_pig_is_last_version">当前设备已是最新版本</string>
    <string name="ubt_unbind_member">解除绑定</string>
    <string name="ubt_service_policy">优必选服务协议</string>
    <string name="ubt_privacy_policy">隐私协议</string>
    <string name="ubt_pig_voice_box">八戒机器人</string>
    <string name="ubt_no_pigs">没有绑定八戒</string>
    <string name="ubt_menber_group">成员组</string>
    <string name="ubt_admin">管理员</string>
    <string name="ubt_trans_admin">转让管理员</string>
    <string name="ubt_delete">删除</string>
    <string name="ubt_add_member">添加成员</string>
    <string name="ubt_addmember_desc">·请让需绑定此八戒的用户，打开八戒APP-我的-设备管理-加入成员组：\n·扫描上面的二维码，加入成员组；\n·加入成员组后用户即与此八戒绑定，可正常使用此APP功能；</string>
    <string name="record_empty_prompt">没有最近通话</string>
    <string name="ubt_coming_soon">敬请期待</string>
    <string name="ubt_pair_pig">配对八戒</string>
    <string name="ubt_pair_pig_desc">·两台八戒扫码配对互联后可以互相发送语音留言；\n·请让另一台八戒的管理员打开八戒机器人APP，并在首页点击进入“配对八戒”页面；\n·点击右上角“扫一扫”，扫描上面的二维码，完成配对互联，两台八戒即可畅享互动发送留言。</string>
    <string name="ubt_san_formember">扫码进入</string>
    <string name="ubt_drop_up_tips">您是八戒的管理员，退出群组会解绑八戒，确认要退出群组吗？</string>
    <string name="exit_group">退出群组</string>
    <string name="ubt_unbind_success">退出群组成功</string>
    <string name="ubt_unbind_fialure">退出群组失败</string>
    <string name="ubt_trans_permission">转让权限</string>
    <string name="ubt_delte_member_tips">删除此成员？</string>
    <string name="ubt_transfer_tips">注意：八戒中的闹钟、提醒、定制问答、配对八戒等个人数据将会清除</string>
    <string name="ubt_trandfer_admin_tips">将管理员权限转让给此账号？</string>
    <string name="ubt_join_group">加入成员组</string>
    <string name="ubt_complete">完成</string>
    <string name="chat_file">文件</string>
    <string name="chat_press_talk">按住 说话</string>
    <string name="chat_image">图片</string>
    <string name="chat_photo">拍摄</string>
    <string name="chat_video">小视频</string>
    <string name="summary_file">[文件]</string>
    <string name="summary_voice">[语音]</string>
    <string name="summary_video">[小视频]</string>
    <string name="save_exist">文件已存在</string>
    <string name="save_succ">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="summary_group_admin_change">管理员变更</string>
    <string name="summary_group_mem_add">加入群</string>
    <string name="summary_group_mem_kick">被踢出群</string>
    <string name="summary_group_mem_modify">资料变更</string>
    <string name="summary_group_mem_quit">退出群</string>
    <string name="summary_group_info_change">群资料变更</string>
    <string name="summary_image">[图片]</string>
    <string name="downloading">正在下载，请稍候</string>
    <string name="download_fail">下载失败</string>
    <string name="chat_resend">重新发送</string>
    <string name="chat_del">删除</string>
    <string name="chat_save">保存</string>
    <string name="chat_file_too_large">文件过大，发送失败</string>
    <string name="chat_file_not_exist">文件不存在，发送失败</string>
    <string name="chat_release_send">松开 结束</string>
    <string name="chat_up_finger">手指上滑，取消发送</string>
    <string name="chat_cancel_finger">松开手指，取消发送</string>
    <string name="chat_content_bad">内容含有敏感词</string>
    <string name="chat_audio_too_short">录音过短，请重试</string>
    <string name="chat_audio_too_long">录音过长，已经发送</string>
    <string name="chat_audio_permission">没有录音权限，请授予权限</string>
    <string name="ubt_unpair">解除配对</string>
    <string name="ubt_confirm_unpair">确认解除配对？</string>
    <string name="ubt_ubpair_success">解除配对成功</string>
    <string name="ubt_ubpair_filure">解除配对失败</string>
    <string name="ubt_get_qr_pair_pig_fialure">获取配对八戒二维码失败</string>
    <string name="ubt_get_qr_join_group_fialure">获取加入成员组二维码失败</string>
    <string name="ubt_scann_qr_tips">将二维码放入框内，即可自动扫描</string>
    <string name="ubt_scann_qr_join_group">扫码进组</string>
    <string name="ubt_scann_qr">扫描二维码</string>
    <string name="ubt_pair_pig_fialure">配对失败</string>
    <string name="ubt_add_member_success">添加成员成功</string>
    <string name="ubt_add_member_failure">添加成员失败</string>
    <string name="ubt_pair_pig_success">配对八戒成功</string>
    <string name="only_admin_operate">仅管理员可操作</string>
    <string name="logout_tip">确定退出吗？</string>
    <string name="pair_pig">配对八戒</string>
    <string name="pair_pig_voice">管理已配对的八戒</string>
    <string name="unbind_pig_dialog_tip">绑定新八戒前，需解绑现有八戒</string>
    <string name="unbind_pig_dialog_sub_tip">解绑入口：我的-八戒详情</string>
    <string name="i_know_text">我知道了</string>
    <string name="close_pig_tip">将手机靠近八戒，可快速绑定</string>
    <string name="ubt_manual_ble_pig">手动连接八戒</string>
    <string name="no_search_pig_tip">未搜到八戒，请确认已按照引导视频正确操作</string>
    <string name="failed_retry">操作失败，请重试</string>
    <string name="ubt_page_bottom">优必选科技有限公司   版权所有</string>
    <string name="ubt_page_bottom_sub">Copyright © 2018~Present Ubtech Robotics Corp.All rights reserved</string>
    <string name="ubt_login_agree_policy">同意《优必选服务协议》与《隐私协议》</string>
    <string name="ubt_login_agree_policy_tip">请确认并同意《优必选服务协议》与《隐私协议》</string>
    <string name="wifi_connect_tip">八戒已连接“%1$s”无线网络，“跳过”也可完成配网</string>
    <string name="mobile_net_connect_tip">八戒已连接移动网络，“跳过”也可完成配网</string>
    <string name="reload_error">加载失败</string>
    <string name="reload">重新加载</string>
    <string name="network_error">当前网络异常，请检查手机网络</string>
    <string name="msg_error_toast">当前数据异常，请稍后重试</string>
    <string name="timeout_error_toast">请求超时，请重试</string>
    <string name="pair_pig_voice_tip">说“八戒八戒，发送留言给八戒”即可留言互动</string>
    <string name="ubt_latest_version_format">检查到有新版本%1$s</string>
    <string name="ubt_ota_status_3">系统正处于升级状态，升级包会在连接无线网络时自动下载安装</string>
    <string name="go_setting">去设置</string>
    <string name="main_voice_message">语音留言</string>
    <string name="main_baijie_pair">配对八戒</string>
    <string name="main_alarm">闹钟</string>
    <string name="ubt_ble_ready">蓝牙与位置信息</string>
    <string name="ubt_ble_open">打开蓝牙</string>
    <string name="ubt_ble_location">允许获取位置权限</string>
    <string name="ubt_ble_ready_tip">请打开手机蓝牙，并允许八戒机器人APP\n获取你的位置信息，以便进行网络连接</string>
    <string name="continuous_voice">连续对话</string>
    <string name="continuous_voice_tip1">开启后，只要唤醒1次即可和八戒多次对话。</string>
    <string name="continuous_voice_tip2">对话期间：\n如果想让八戒停止说话，短按电源键即可；\n如果八戒在10秒内没有听到声音，则需重新唤醒。</string>
    <string name="continuous_voice_tip3">关闭开关时，每次对话都需要唤醒。</string>
    <string name="beehive_mobile_tip1">开启蜂窝移动数据后，八戒可通过移动网络访问互联网\n若八戒同时连接了Wi-Fi,则默认使用Wi-Fi网络</string>
    <string name="beehive_mobile_tip2">如想打开或关闭蜂窝移动数据，\n请对八戒说：\n“八戒八戒，打开数据”；\n“八戒八戒，关闭数据”。</string>
</resources>