<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ubt_white"
    android:orientation="vertical">

    <View
        android:id="@+id/ubt_me_normal_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ubt_me_normal_height"
        android:background="@drawable/shape_ubt_tv_cyan_gb" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:orientation="vertical">

        <TextView
            style="@style/UBTTabTitleTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_ubt_tv_cyan_gb"
            android:paddingTop="@dimen/ubt_16dp"
            android:text="@string/ubt_mina" />

        <include layout="@layout/include_tips" />


            <RelativeLayout
                android:layout_marginEnd="@dimen/ubt_16dp"
                android:layout_marginStart="@dimen/ubt_16dp"
                android:layout_marginBottom="4dp"
                android:layout_width="match_parent"
                android:background="@drawable/shape_ubt_card_bg"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ubt_img_me_photo"
                    android:layout_width="@dimen/ubt_me_photo_size"
                    android:layout_height="@dimen/ubt_me_photo_size"
                    android:layout_marginBottom="@dimen/ubt_16dp"
                    android:layout_marginStart="@dimen/ubt_16dp"
                    android:layout_marginTop="@dimen/ubt_16dp"
                    app:srcCompat="@drawable/ic_sign_in" />

                <TextView
                    android:id="@+id/ubt_tv_me_nikename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/ubt_16dp"
                    android:layout_toEndOf="@+id/ubt_img_me_photo"
                    android:text="@string/ubt_visitor_login"
                    android:textColor="@color/ubt_tips_txt_color"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/ubt_btn_go_login"
                    android:layout_width="@dimen/ubt_30dp"
                    android:layout_height="@dimen/ubt_30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:background="@null"
                    android:padding="8dp"
                    android:src="@drawable/ic_goto" />
            </RelativeLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/ubt_global_bg_color"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/ubt_16dp">

                <Button
                    android:id="@+id/ubt_btn_person_set_wifi"
                    style="@style/UBTMeBtnTheme"
                    android:drawableStart="@drawable/ic_wifi"
                    android:text="@string/ubt_bunding_set_net" />

                <Button
                    android:id="@+id/ubt_btn_person_hotspot"
                    style="@style/UBTMeBtnTheme"
                    android:drawableStart="@drawable/ic_hotspot"
                    android:text="@string/ubt_person_hotspot" />

                <Button
                    android:id="@+id/ubt_btn_device_manager"
                    style="@style/UBTMeBtnTheme"
                    android:layout_marginTop="10dp"
                    android:drawableStart="@drawable/ic_family"
                    android:text="@string/ubt_device_manger" />

                <Button
                    android:id="@+id/ubt_btn_person_answer"
                    style="@style/UBTMeBtnTheme"
                    android:drawableStart="@drawable/ic_answer"
                    android:text="@string/ubt_custom_answer" />

                <Button
                    android:id="@+id/ubt_btn_person_clock"
                    style="@style/UBTMeBtnTheme"
                    android:drawableStart="@drawable/ic_clock"
                    android:text="@string/ubt_aclock" />

                <Button
                    android:id="@+id/ubt_btn_person_remind"
                    style="@style/UBTMeBtnTheme"
                    android:drawableStart="@drawable/ic_remind"
                    android:text="@string/ubt_remind" />

                <Button
                    android:id="@+id/ubt_btn_person_qq"
                    style="@style/UBTMeBtnTheme"
                    android:layout_marginTop="10dp"
                    android:drawableStart="@drawable/ic_member"
                    android:text="@string/ubt_qq_music" />

                <Button
                    android:id="@+id/ubt_btn_person_feedback"
                    style="@style/UBTMeBtnTheme"
                    android:layout_marginTop="10dp"
                    android:drawableStart="@drawable/ic_help"
                    android:text="@string/ubt_help" />


                <com.ubtechinc.commlib.view.UbtSubTxtButton
                    android:id="@+id/ubt_btn_person_about"
                    style="@style/UBTMeBtnTheme"
                    android:drawableStart="@drawable/ic_about"
                    android:text="@string/ubt_about"
                    app:rightText="@string/ubt_version_format"
                    app:rightTextColor="@color/ubt_version_color"
                    app:rightTextSize="14sp"
                    app:rightTextPadding="52dp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>