<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="15dp">

        <ImageView
            android:id="@+id/iv_mobile_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mobile_data" />

        <TextView
            android:id="@+id/tv_mobile_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/ubt_mobile_bee_hive"
            android:textColor="#FF454B59"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/iv_mobile_icon"
            app:layout_constraintTop_toTopOf="@id/iv_mobile_icon" />

        <TextView
            android:id="@+id/tv_mobile_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_3"
            android:textColor="#FFB4C0C7"
            android:textSize="14sp"
            android:text="@string/ubt_is_open"
            app:layout_constraintLeft_toLeftOf="@id/tv_mobile_label"
            app:layout_constraintTop_toBottomOf="@id/tv_mobile_label" />

    </android.support.constraint.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/dp_15"
        android:background="#FFE2E2E2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:lineSpacingExtra="@dimen/dp_3"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/beehive_mobile_tip1"
        android:textColor="#FF454B59"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:lineSpacingExtra="@dimen/dp_3"
        android:text="@string/beehive_mobile_tip2"
        android:textColor="#FF454B59"
        android:textSize="14sp" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15">

        <ImageView
            android:id="@+id/iv_tip"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:src="@drawable/ic_tip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_5"
            android:text="使用移动数据时，请关注流量使用情况"
            android:textColor="#FFB4C0C7"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@id/iv_tip" />

    </android.support.constraint.ConstraintLayout>


</LinearLayout>