<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_dialog_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/ubt_hotspot_name"
        android:id="@+id/ubt_hotspot_title"
        android:textSize="@dimen/sp_17"
        android:textColor="@color/ubt_tips_txt_color"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />
    <com.ubtechinc.commlib.view.UbtClearableEditText
        android:layout_below="@+id/ubt_hotspot_title"
        android:id="@+id/ubt_edt_dialog"
        android:paddingStart="@dimen/dp_6"
        android:background="@drawable/shape_ubt_dialog_edt__gb"
        style="@style/UBTDialogEdtTheme"
        android:layout_marginTop="@dimen/dp_15"
        android:gravity="center_vertical|left"
        app:defaultIcon="@drawable/ic_close"
        android:textSize="@dimen/sp_17"
        android:textColor="@color/ubt_tips_txt_color"
        android:layout_height="@dimen/dp_38"
        />

    <View
        android:id="@+id/ubt_dialog_decor"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ubt_1px"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ubt_edt_dialog"
        android:background="@color/ubt_dilog_decore_color" />
    <View
        android:id="@+id/ubt_btn_decor"
        android:layout_weight="0.1"
        android:layout_below="@+id/ubt_dialog_decor"
        android:layout_centerHorizontal="true"
        android:background="@color/ubt_dilog_decore_color"
        android:layout_width="@dimen/ubt_1px"
        android:layout_height="@dimen/ubt_dialog_margintop"/>
    <LinearLayout
        android:layout_below="@+id/ubt_dialog_decor"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/ubt_dialog_left_btn"
            style="@style/UBTDialogBottonTheme"
            android:layout_width="match_parent"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"

            android:text="@string/ubt_cancel" />
        <Button
            android:id="@+id/ubt_dialog_right_btn"
            android:layout_weight="0.5"
            android:textColor="@color/ubt_tab_btn_txt_checked_color"
            style="@style/UBTDialogBottonTheme"
            android:text="@string/ubt_enter"

            />
    </LinearLayout>





</RelativeLayout>