<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null">

    <RelativeLayout
        android:id="@+id/ubt_layout_userinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@drawable/shape_ubt_me_item_bg"
        android:padding="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/ubt_photo"
            android:textColor="@color/ubt_tips_txt_color"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/ubt_img_photo"
            android:layout_width="@dimen/ubt_userinfo_photo_size"
            android:layout_height="@dimen/ubt_userinfo_photo_size"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_sign_in" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ubt_layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ubt_layout_userinfo"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@drawable/shape_ubt_me_item_bg"
        android:padding="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/ubt_nikename"
            android:textColor="@color/ubt_tips_txt_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/ubt_user_name"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ubt_userinfo_photo_size"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:src="@drawable/ic_sign_in"
            android:textColor="@color/ubt_version_color" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ubt_layout_useraccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ubt_layout_username"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@drawable/shape_ubt_me_item_bg"
        android:padding="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/ubt_account"
            android:textColor="@color/ubt_tips_txt_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/ubt_user_account"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ubt_userinfo_photo_size"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:src="@drawable/ic_sign_in"
            android:textColor="@color/ubt_version_color" />

    </RelativeLayout>

    <Button
        android:id="@+id/ubt_btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/ubt_logout_btn_marginbottom"
        android:background="@drawable/selector_ubt_logout_btn"
        android:text="@string/ubt_logout"
        android:textColor="@color/ubt_dialog_btn_txt_color"
        android:textSize="15sp" />
</RelativeLayout>